[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/MenuFont.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.568627, 0.568627, 0.568627, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1020.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="StartMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Host" type="Button" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 390.0
margin_top = 160.0
margin_right = 615.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 2 )
text = "Host"

[node name="Join" type="Button" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 390.0
margin_top = 340.0
margin_right = 615.0
margin_bottom = 398.0
custom_fonts/font = ExtResource( 2 )
text = "Join"

[node name="DebugJoin" type="Button" parent="StartMenu"]
margin_top = 570.0
margin_right = 160.0
margin_bottom = 600.0
text = "Debug  Join"

[node name="JoinMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CodeEdit" type="LineEdit" parent="JoinMenu"]
margin_left = 330.0
margin_top = 250.0
margin_right = 720.0
margin_bottom = 312.0

[node name="Label" type="Label" parent="JoinMenu"]
margin_left = 290.0
margin_top = 160.0
margin_right = 762.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 2 )
text = "Ask your friend for the code on their screen."

[node name="JoinMenuJoin" type="Button" parent="JoinMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 390.0
margin_top = 340.0
margin_right = 615.0
margin_bottom = 398.0
custom_fonts/font = ExtResource( 2 )
text = "Join"

[node name="JoinMenuBack" type="Button" parent="JoinMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 390.0
margin_top = 420.0
margin_right = 615.0
margin_bottom = 478.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
[connection signal="pressed" from="StartMenu/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="StartMenu/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="StartMenu/DebugJoin" to="." method="_on_DebugJoin_pressed"]
[connection signal="pressed" from="JoinMenu/JoinMenuJoin" to="." method="_on_JoinMenuJoin_pressed"]
[connection signal="pressed" from="JoinMenu/JoinMenuBack" to="." method="_on_JoinMenuBack_pressed"]
